tests/type_errors/map_tuple_product.nos
# expect_error: does not implement Num
# map to tuples then product - tuples don't implement Num
main() = [1,2,3].map(x => (x, x * 2)).product()
